@@ -665,5 +665,5 @@ td.welcome-link img{
 
 .jumpto {
     width:250px;
-    height: 80px;
+    height: 60px;
 }
