@@ -35,7 +35,7 @@ timeFormat: 'hh:mm:ss',
 <?php echo "hourText: '".__('TIMEPICKER_HOUR')."',"; ?>
 <?php echo "minuteText: '".__('TIMEPICKER_MINUTE')."',"; ?>
 <?php echo "secondText: '".__('TIMEPICKER_SECOND')."',"; ?>
-<?php echo "currentText: '".__('TIMEPICKER_NOW')."',"; ?>
+<?php echo "currentText: '".__('TIMEPICKER_ENDDAY')."',"; ?>
 <?php echo "closeText: '".__('TIMEPICKER_CLOSE')."'"; ?>
 });
 $('#end_time').timepicker({
@@ -50,7 +50,7 @@ timeFormat: 'hh:mm:ss',
 <?php echo "hourText: '".__('TIMEPICKER_HOUR')."',"; ?>
 <?php echo "minuteText: '".__('TIMEPICKER_MINUTE')."',"; ?>
 <?php echo "secondText: '".__('TIMEPICKER_SECOND')."',"; ?>
-<?php echo "currentText: '".__('TIMEPICKER_NOW')."',"; ?>
+<?php echo "currentText: '".__('TIMEPICKER_ENDDAY')."',"; ?>
 <?php echo "closeText: '".__('TIMEPICKER_CLOSE')."'"; ?>
 });
 });
